--- a/rezume.html
+++ b/rezume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <title>HELLO!</title>
     </head>
     <body>
         <h3>Hello, my name is Eldos</h3>
