changes on 12th h/w

--- a/headers.html
+++ b/headers.html
@@ -88,7 +88,7 @@
                 <div id="logoAndSearch5">
                     <img src="logo3.svg" alt="logo">
                     <div id="SearchDiv5">
-                        <img src="search.svg">
+                        <img style="height: 16px;margin-left: 15px;" src="search.svg">
                         <input id="input5" type="text" placeholder='Search'>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                 <img src="logo5.svg" alt="logo">
             </div>
             <div id="SearchDiv9">
-                <input id="input9" type="text" placeholder='Search'>
+                <input id="input9" type="text" placeholder='Search...'>
                 <img src="search2.svg">
             </div>
             <div id="links9">
