change file 'shadow_and_gradient'

--- a/shadow_and_gradient.html
+++ b/shadow_and_gradient.html
@@ -15,5 +15,6 @@
         <p id="text">somekind of text</p>
         <div id="secondDiv"></div>
         <div id="thirdDiv"></div>
+        <div id="fourthDiv"></div>
     </body>
 </html>
