refactoring menu.html

--- a/Menu.html
+++ b/Menu.html
@@ -9,124 +9,124 @@
         <title>Menu</title>
     </head>
     <body>
-        <div id="menu">
-            <div class="card">
-                <img class="keks" src="keks1.svg" alt="cupcake">
-                <div class="content">
-                        <div class="text">
-                        <h2 class="title">Кремовый замок</h2>
-                        <p class="descripe">Нежный крем любого цвета на выбор, вафельная основа</p>
+        <main>
+            <div class="main__card">
+                <img class="card__pics-keks" src="keks1.svg" alt="cupcake">
+                <div class="card__content">
+                    <div class="content__text">
+                        <h2 class="text__title">Кремовый замок</h2>
+                        <p class="text__descripe">Нежный крем любого цвета на выбор, вафельная основа</p>
                     </div>
-                    <p class="price">150 ₽/шт.</p>
-                    <div class="cost">
-                        <button class="buy">Заказать</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <img class="keks" src="MalinaRai.svg" alt="cupcake">
-                <div class="content">
-                        <div class="text">
-                        <h2 class="title">Малиновый рай</h2>
-                        <p class="descripe">Воздушный крем, темная основа и ягода малины</p>
-                    </div>
-                    <p class="price">150 ₽/шт.</p>
-                    <div class="cost">
-                        <button class="buy">Заказать</button>
+                    <p class="content__price">150 ₽/шт.</p>
+                    <div class="content__cost">
+                        <button class="cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <img class="keks" src="fireworks_puncake.svg" alt="cupcake">
-                <div class="content">
-                        <div class="text">
-                        <h2 class="title">Фейерверк</h2>
-                        <p class="descripe">Разноцветные крем, с бисквитной основой</p>
+            <div class="main__card">
+                <img class="card__pics-keks" src="MalinaRai.svg" alt="cupcake">
+                <div class="card__content">
+                    <div class="content__text">
+                        <h2 class="text__title">Малиновый рай</h2>
+                        <p class="text__descripe">Воздушный крем, темная основа и ягода малины</p>
                     </div>
-                    <p class="price">150 ₽/шт.</p>
-                    <div class="cost">
-                        <button class="buy">Заказать</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <img class="keks" src="chocoworld.svg" alt="cupcake">
-                <div class="content">
-                        <div class="text">
-                        <h2 class="title">Шоколадный мир</h2>
-                        <p class="descripe">Ореховая стружка, нежный крем и шоколадная основа</p>
-                    </div>
-                    <p class="price">150 ₽/шт.</p>
-                    <div class="cost">
-                        <button class="buy">Заказать</button>
+                    <p class="content__price">150 ₽/шт.</p>
+                    <div class="content__cost">
+                        <button class="cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <img class="keks" src="tears_of_dragon.svg" alt="cupcake">
-                <div class="content">
-                        <div class="text">
-                        <h2 class="title">Слезы дракона</h2>
-                        <p class="descripe">Нежный крем любого цвета на выбор, вафельная основа</p>
+            <div class="main__card">
+                <img class="card__pics-keks" src="fireworks_puncake.svg" alt="cupcake">
+                <div class="card__content">
+                    <div class="content__text">
+                        <h2 class="text__title">Фейерверк</h2>
+                        <p class="text__descripe">Разноцветные крем, с бисквитной основой</p>
                     </div>
-                    <p class="price">150 ₽/шт.</p>
-                    <div class="cost">
-                        <button class="buy">Заказать</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <img class="keks" src="summer_fantasy.svg" alt="cupcake">
-                <div class="content">
-                        <div class="text">
-                        <h2 class="title">Летняя фантазия</h2>
-                        <p class="descripe">Украшения в форме сердец, для любимого человека</p>
-                    </div>
-                    <p class="price">150 ₽/шт.</p>
-                    <div class="cost">
-                        <button class="buy">Заказать</button>
+                    <p class="content__price">150 ₽/шт.</p>
+                    <div class="content__cost">
+                        <button class="cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <img class="keks" src="crazy_mis.svg" alt="cupcake">
-                <div class="content">
-                        <div class="text">
-                        <h2 class="title">Мыс безумия</h2>
-                        <p class="descripe">Разноцветная основа, стружка и нежный крем</p>
+            <div class="main__card">
+                <img class="card__pics-keks" src="chocoworld.svg" alt="cupcake">
+                <div class="card__content">
+                    <div class="content__text">
+                        <h2 class="text__title">Шоколадный мир</h2>
+                        <p class="text__descripe">Ореховая стружка, нежный крем и шоколадная основа</p>
                     </div>
-                    <p class="price">150 ₽/шт.</p>
-                    <div class="cost">
-                        <button class="buy">Заказать</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <img class="keks" src="cloud_fairytale.svg" alt="cupcake">
-                <div class="content">
-                        <div class="text">
-                        <h2 class="title">Облачная сказка</h2>
-                        <p class="descripe">Светлая основа, нежный крем со стружкой сверху</p>
-                    </div>
-                    <p class="price">150 ₽/шт.</p>
-                    <div class="cost">
-                        <button class="buy">Заказать</button>
+                    <p class="content__price">150 ₽/шт.</p>
+                    <div class="content__cost">
+                        <button class="cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
-            <div class="card">
-                <img class="keks" src="night_knight.svg" alt="cupcake">
-                <div class="content">
-                        <div class="text">
-                        <h2 class="title">Темный рыцарь</h2>
-                        <p class="descripe">Тёмная основа, нежный крем и вкусные шарики</p>
+            <div class="main__card">
+                <img class="card__pics-keks" src="tears_of_dragon.svg" alt="cupcake">
+                <div class="card__content">
+                    <div class="content__text">
+                        <h2 class="text__title">Слезы дракона</h2>
+                        <p class="text__descripe">Нежный крем любого цвета на выбор, вафельная основа</p>
                     </div>
-                    <p class="price">150 ₽/шт.</p>
-                    <div class="cost">
-                        <button class="buy">Заказать</button>
+                    <p class="content__price">150 ₽/шт.</p>
+                    <div class="content__cost">
+                        <button class="cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="main__card">
+                <img class="card__pics-keks" src="summer_fantasy.svg" alt="cupcake">
+                <div class="card__content">
+                    <div class="content__text">
+                        <h2 class="text__title">Летняя фантазия</h2>
+                        <p class="text__descripe">Украшения в форме сердец, для любимого человека</p>
+                    </div>
+                    <p class="content__price">150 ₽/шт.</p>
+                    <div class="content__cost">
+                        <button class="cost__buy">Заказать</button>
+                    </div>
+                </div>
+            </div>
+            <div class="main__card">
+                <img class="card__pics-keks" src="crazy_mis.svg" alt="cupcake">
+                <div class="card__content">
+                    <div class="content__text">
+                        <h2 class="text__title">Мыс безумия</h2>
+                        <p class="text__descripe">Разноцветная основа, стружка и нежный крем</p>
+                    </div>
+                    <p class="content__price">150 ₽/шт.</p>
+                    <div class="content__cost">
+                        <button class="cost__buy">Заказать</button>
+                    </div>
+                </div>
+            </div>
+            <div class="main__card">
+                <img class="card__pics-keks" src="cloud_fairytale.svg" alt="cupcake">
+                <div class="card__content">
+                    <div class="content__text">
+                        <h2 class="text__title">Облачная сказка</h2>
+                        <p class="text__descripe">Светлая основа, нежный крем со стружкой сверху</p>
+                    </div>
+                    <p class="content__price">150 ₽/шт.</p>
+                    <div class="content__cost">
+                        <button class="cost__buy">Заказать</button>
+                    </div>
+                </div>
+            </div>
+            <div class="main__card">
+                <img class="card__pics-keks" src="night_knight.svg" alt="cupcake">
+                <div class="card__content">
+                    <div class="content__text">
+                        <h2 class="text__title">Темный рыцарь</h2>
+                        <p class="text__descripe">Тёмная основа, нежный крем и вкусные шарики</p>
+                    </div>
+                    <p class="content__price">150 ₽/шт.</p>
+                    <div class="content__cost">
+                        <button class="cost__buy">Заказать</button>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
