--- a/Menu.html
+++ b/Menu.html
@@ -10,120 +10,120 @@
     </head>
     <body>
         <main>
-            <div class="main__card">
-                <img class="card__pics-keks" src="keks1.svg" alt="cupcake">
-                <div class="card__content">
-                    <div class="content__text">
-                        <h2 class="text__title">Кремовый замок</h2>
-                        <p class="text__descripe">Нежный крем любого цвета на выбор, вафельная основа</p>
+            <div class="card">
+                <img class="card-picsKeks" src="keks1.svg" alt="cupcake">
+                <div class="card-content">
+                    <div class="content-text">
+                        <h2 class="content-text__title">Кремовый замок</h2>
+                        <p class="content-text__descripe">Нежный крем любого цвета на выбор, вафельная основа</p>
                     </div>
-                    <p class="content__price">150 ₽/шт.</p>
-                    <div class="content__cost">
-                        <button class="cost__buy">Заказать</button>
-                    </div>
-                </div>
-            </div>
-            <div class="main__card">
-                <img class="card__pics-keks" src="MalinaRai.svg" alt="cupcake">
-                <div class="card__content">
-                    <div class="content__text">
-                        <h2 class="text__title">Малиновый рай</h2>
-                        <p class="text__descripe">Воздушный крем, темная основа и ягода малины</p>
-                    </div>
-                    <p class="content__price">150 ₽/шт.</p>
-                    <div class="content__cost">
-                        <button class="cost__buy">Заказать</button>
+                    <p class="content-price">150 ₽/шт.</p>
+                    <div class="content-cost">
+                        <button class="content-cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
-            <div class="main__card">
-                <img class="card__pics-keks" src="fireworks_puncake.svg" alt="cupcake">
-                <div class="card__content">
-                    <div class="content__text">
-                        <h2 class="text__title">Фейерверк</h2>
-                        <p class="text__descripe">Разноцветные крем, с бисквитной основой</p>
+            <div class="card">
+                <img class="card-picsKeks" src="MalinaRai.svg" alt="cupcake">
+                <div class="card-content">
+                    <div class="content-text">
+                        <h2 class="content-text__title">Малиновый рай</h2>
+                        <p class="content-text__descripe">Воздушный крем, темная основа и ягода малины</p>
                     </div>
-                    <p class="content__price">150 ₽/шт.</p>
-                    <div class="content__cost">
-                        <button class="cost__buy">Заказать</button>
-                    </div>
-                </div>
-            </div>
-            <div class="main__card">
-                <img class="card__pics-keks" src="chocoworld.svg" alt="cupcake">
-                <div class="card__content">
-                    <div class="content__text">
-                        <h2 class="text__title">Шоколадный мир</h2>
-                        <p class="text__descripe">Ореховая стружка, нежный крем и шоколадная основа</p>
-                    </div>
-                    <p class="content__price">150 ₽/шт.</p>
-                    <div class="content__cost">
-                        <button class="cost__buy">Заказать</button>
+                    <p class="content-price">150 ₽/шт.</p>
+                    <div class="content-cost">
+                        <button class="content-cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
-            <div class="main__card">
-                <img class="card__pics-keks" src="tears_of_dragon.svg" alt="cupcake">
-                <div class="card__content">
-                    <div class="content__text">
-                        <h2 class="text__title">Слезы дракона</h2>
-                        <p class="text__descripe">Нежный крем любого цвета на выбор, вафельная основа</p>
+            <div class="card">
+                <img class="card-picsKeks" src="fireworks_puncake.svg" alt="cupcake">
+                <div class="card-content">
+                    <div class="content-text">
+                        <h2 class="content-text__title">Фейерверк</h2>
+                        <p class="content-text__descripe">Разноцветные крем, с бисквитной основой</p>
                     </div>
-                    <p class="content__price">150 ₽/шт.</p>
-                    <div class="content__cost">
-                        <button class="cost__buy">Заказать</button>
-                    </div>
-                </div>
-            </div>
-            <div class="main__card">
-                <img class="card__pics-keks" src="summer_fantasy.svg" alt="cupcake">
-                <div class="card__content">
-                    <div class="content__text">
-                        <h2 class="text__title">Летняя фантазия</h2>
-                        <p class="text__descripe">Украшения в форме сердец, для любимого человека</p>
-                    </div>
-                    <p class="content__price">150 ₽/шт.</p>
-                    <div class="content__cost">
-                        <button class="cost__buy">Заказать</button>
+                    <p class="content-price">150 ₽/шт.</p>
+                    <div class="content-cost">
+                        <button class="content-cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
-            <div class="main__card">
-                <img class="card__pics-keks" src="crazy_mis.svg" alt="cupcake">
-                <div class="card__content">
-                    <div class="content__text">
-                        <h2 class="text__title">Мыс безумия</h2>
-                        <p class="text__descripe">Разноцветная основа, стружка и нежный крем</p>
+            <div class="card">
+                <img class="card-picsKeks" src="chocoworld.svg" alt="cupcake">
+                <div class="card-content">
+                    <div class="content-text">
+                        <h2 class="content-text__title">Шоколадный мир</h2>
+                        <p class="content-text__descripe">Ореховая стружка, нежный крем и шоколадная основа</p>
                     </div>
-                    <p class="content__price">150 ₽/шт.</p>
-                    <div class="content__cost">
-                        <button class="cost__buy">Заказать</button>
-                    </div>
-                </div>
-            </div>
-            <div class="main__card">
-                <img class="card__pics-keks" src="cloud_fairytale.svg" alt="cupcake">
-                <div class="card__content">
-                    <div class="content__text">
-                        <h2 class="text__title">Облачная сказка</h2>
-                        <p class="text__descripe">Светлая основа, нежный крем со стружкой сверху</p>
-                    </div>
-                    <p class="content__price">150 ₽/шт.</p>
-                    <div class="content__cost">
-                        <button class="cost__buy">Заказать</button>
+                    <p class="content-price">150 ₽/шт.</p>
+                    <div class="content-cost">
+                        <button class="content-cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
-            <div class="main__card">
-                <img class="card__pics-keks" src="night_knight.svg" alt="cupcake">
-                <div class="card__content">
-                    <div class="content__text">
-                        <h2 class="text__title">Темный рыцарь</h2>
-                        <p class="text__descripe">Тёмная основа, нежный крем и вкусные шарики</p>
+            <div class="card">
+                <img class="card-picsKeks" src="tears_of_dragon.svg" alt="cupcake">
+                <div class="card-content">
+                    <div class="content-text">
+                        <h2 class="content-text__title">Слезы дракона</h2>
+                        <p class="content-text__descripe">Нежный крем любого цвета на выбор, вафельная основа</p>
                     </div>
-                    <p class="content__price">150 ₽/шт.</p>
-                    <div class="content__cost">
-                        <button class="cost__buy">Заказать</button>
+                    <p class="content-price">150 ₽/шт.</p>
+                    <div class="content-cost">
+                        <button class="content-cost__buy">Заказать</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-picsKeks" src="summer_fantasy.svg" alt="cupcake">
+                <div class="card-content">
+                    <div class="content-text">
+                        <h2 class="content-text__title">Летняя фантазия</h2>
+                        <p class="content-text__descripe">Украшения в форме сердец, для любимого человека</p>
+                    </div>
+                    <p class="content-price">150 ₽/шт.</p>
+                    <div class="content-cost">
+                        <button class="content-cost__buy">Заказать</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-picsKeks" src="crazy_mis.svg" alt="cupcake">
+                <div class="card-content">
+                    <div class="content-text">
+                        <h2 class="content-text__title">Мыс безумия</h2>
+                        <p class="content-text__descripe">Разноцветная основа, стружка и нежный крем</p>
+                    </div>
+                    <p class="content-price">150 ₽/шт.</p>
+                    <div class="content-cost">
+                        <button class="content-cost__buy">Заказать</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-picsKeks" src="cloud_fairytale.svg" alt="cupcake">
+                <div class="card-content">
+                    <div class="content-text">
+                        <h2 class="content-text__title">Облачная сказка</h2>
+                        <p class="content-text__descripe">Светлая основа, нежный крем со стружкой сверху</p>
+                    </div>
+                    <p class="content-price">150 ₽/шт.</p>
+                    <div class="content-cost">
+                        <button class="content-cost__buy">Заказать</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-picsKeks" src="night_knight.svg" alt="cupcake">
+                <div class="card-content">
+                    <div class="content-text">
+                        <h2 class="content-text__title">Темный рыцарь</h2>
+                        <p class="content-text__descripe">Тёмная основа, нежный крем и вкусные шарики</p>
+                    </div>
+                    <p class="content-price">150 ₽/шт.</p>
+                    <div class="content-cost">
+                        <button class="content-cost__buy">Заказать</button>
                     </div>
                 </div>
             </div>
