--- a/arraysJS.html
+++ b/arraysJS.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="functionsJS.js"></script>
+        <script src="arraysJS.js"></script>
     </head>
     <body>
 
